# Trinity-Wealth-Engine

./: .antigravityignore  .antigravityrules  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: archivist_agent.py  bookkeeper_agent.py  macro_analyst_agent.py  macro_economist_agent.py  macro_quant_agent.py  manager_agent.py  news_funnel_flow.py  news_youtube_flow.py  researcher_agent.py  strategic_allocator.py  youtube_pitch_flow.py
api/: auth.py  config.py  jobs.py  main.py  news_funnel_cards.py  routes_agents.py  routes_kanban.py  routes_portfolio.py  schemas.py  state_db.py
cli/: __init__.py  run_news_funnel.py  setup_windows_scheduler.ps1
core/: agent_log.py  llm_factory.py  logger.py  nlp_utils.py  prompt_harness.py  retry.py  security.py  text_utils.py  utils.py
prompts/: __init__.py
schemas/: macro_schemas.py  news_funnel_schemas.py  pkm_models.py  report_labels.py  warning_registry.py  youtube_pitch_schemas.py
scripts/: run_news_funnel.py  run_news_funnel_auto.py  setup_windows_scheduler.ps1
tests/: conftest.py  test_agent_log.py  test_archivist_utils.py  test_knowledge_tools.py  test_market_tools.py  test_portfolio.py  test_retry.py  test_youtube_extract.py
tests/agents/: test_news_funnel_flow.py  test_youtube_pitch_flow.py
tests/api/: conftest.py  test_auth.py  test_hitl_flow.py  test_job_outputs.py  test_jobs_queue.py  test_kanban_and_dispatch.py  test_kanban_display_seq.py  test_news_funnel_pending_routes.py  test_portfolio.py  test_portfolio_actual_mutations.py  test_portfolio_actual_routes.py  test_youtube_pitch_api.py
tests/core/: test_agent_log.py  test_llm_factory.py  test_logger.py  test_manager_utils.py  test_prompt_harness.py  test_retry.py  test_security.py  test_utils.py
tests/integration/: test_macro.py
tests/schemas/: test_youtube_pitch_schemas.py
tests/tools/: test_news_funnel_pipeline.py  test_news_funnel_store.py
tests/unit/: test_8_point_review_fixes.py  test_derived_and_risk.py  test_news_funnel_schemas.py  test_nlp_and_schemas.py  test_quality_check.py  test_stale_exemption.py  test_strategic_allocator_upgrade.py  test_structured_output_retry.py  test_supporting_data_mismatch.py  test_valuation.py
tools/: _atomic_io.py  archivist_tools.py  knowledge_tools.py  macro_tools.py  market_tools.py  obsidian_tools.py  portfolio_tools.py  tool_errors.py  youtube_tools.py
tools/archivist/: core.py  indexer.py  linter.py  parser.py  search.py  writer.py
tools/content/: __init__.py  youtube_pitcher.py
tools/knowledge/: __init__.py  article.py  core.py  document.py  search_youtube_insights.py  youtube.py  youtube_monitor.py
tools/macro/: baselines.py  content_references.py  dashboard.py  derived_ratios.py  evaluation.py  ingest.py  news_funnel.py  news_funnel_store.py  news_radar.py  parsers.py  report_formatter.py  risk_analytics.py  (+3 more)
validators/: __init__.py  contradiction_rules.py  quality_check.py  structured_output_retry.py  valuation_guardrails.py
web/: .oxlintrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+176 files in other folders)
