[project]
name = "invest-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fredapi>=0.5.2",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "langsmith>=0.7.37",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "yfinance>=0.2.0",
    "langchain-openai>=0.3.0",
    "youtube-transcript-api>=0.6.0",
    "trafilatura>=2.0.0",
    "pypdf>=5.0.0",
    "python-frontmatter>=1.1.0",
    "filelock>=3.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
